manifest/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-nodejs
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-nodejs
  template:
    metadata:
      labels:
        app: tcc-nodejs
    spec:
      containers:
        - name: tcc-nodejs
          image: thanapongsj/tcc-nodejs:4b72360f06bb98a85d1331e1c15e07d00895d4a1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
